# trustpilot_poc

./: .env.template  .gitignore  LICENSE  README.md  makefile  pyproject.toml
app/: api.py  audit.py  db.py  dq_rules.py  ge_expectations.py  ingest.py  models.py  security.py
config/: README.md  catalog.yml  retention.yml
docs/: data_dictionary.md  demo_prep_notes.md
great_expectations/: __init__.py  dataset.py
tests/: conftest.py  test_api.py  test_dq_rules.py  test_ge_expectations.py  test_ingest.py
trustpilot_poc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
